2003-11-22  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in, network-conf.in, platform.pl.in, service.pl.in, 
	  services-conf.in, time-conf.in, users-conf.in: s/woody/3\.0/
	* time-conf.in: made it to use gst_service_list_sysv_any_installed ()
	  when the distro is debian woody

2003-11-22  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* services.pl.in: (gst_service_sysv_list_any_installed): added, this
	  checks that any service inside a list exists in init.d

2003-10-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* time-conf.in: fixed the ntpd server for debian, it was "ntp-simple",
	  not "ntpd"
	* network.pl.in, time-conf.in: fixed ntp and smbd servers
	  activation/deactivation

2003-10-26  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: fixed XML generation when iwconfig is missing

2003-10-24  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
        * Release 0.29.0

2003-10-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in: added a small delay between ifup and ifdown when
	  an interface has changed

2003-10-22  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* time-conf.in: added gentoo to conf_get_replace_table(). fixes
	  bug #123400

2003-10-20  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
         * time-conf.in: made the XML to send the months beginning from 1
           instead of 0, now it works in the same way getting than
	   setting the XML

2003-10-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* network.pl.in, network-conf.in: added wireless interfaces support
	  for debian >= woody, redhat >= 7.2 and mandrake >= 9.0

2003-10-13  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* release 0.28.0

2003-10-09  Gerhard Mourani  <gmourani@openna.com>

	* network-conf.in, network.pl.in, package-conf.in, platform.pl.in,
	  print.pl.in, service.pl.in, services-conf.in, shares-conf.in,
	  time-conf.in, users-conf.in: added OpenNA support
