@@ -1,3 +1,8 @@
+2003-11-23  Carlos Garnacho Parro  <garnacho@tuxerver.net>
+
+	* boot-conf.in: made it to mount the /boot partition before getting
+	  or setting the data. fixes bug #125199
+
 2003-11-22  Carlos Garnacho Parro  <garnacho@tuxerver.net>
 
 	* network.pl.in, network-conf.in, platform.pl.in, service.pl.in, 
